--- a/package.json
+++ b/package.json
@@ -7,6 +7,6 @@
 		"name": "Axel Kittenberger",
 		"email": "axkibe@gmail.com"
 	},
-	"main": "./src/jion.js",
+	"main": "./src/root.js",
 	"license": "MIT"
 }
